--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,38 @@ body{
 	color:#FFFFFF;
 	height:0px;
 }
+
+#caixa{
+	position:absolute;
+	margin-top:220px;
+	margin-left:250px;
+	background:#FFFFFF;
+	width:1250px;
+	height:40px;
+	border:1px solid #cdcdcd ;
+	padding: 30px 25px;
+	font-size:30px;
+	color:#005a9c;
+	font-family:Arial, Helvetica, sans-serif;
+}
+
+#botao{
+	margin-left:275px;
+	margin-top:-32px;
+	font-size:16px;
+	color:#FFFFFF;
+	background:#CCCCCC;
+	width:50px;
+	height:20px;
+	padding:4px 12px;
+	font-family:Arial, Helvetica, sans-serif;
+	font-weight:900;
+	font-stretch:ultra-condensed;
+	cursor:pointer;
+	
+}
+#botao:hover{
+	background:#FF0000;
+	-webkit-transition:all 1s linear;
+	transition:all 1s linear;
+}
